# lo-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Span-Web.bat  Span.bat  constraints.txt  docker-compose.yml  pyproject.toml  requirements.txt
docs/: INSTALL-x64.md  INTEGRATIES-TOEVOEGEN.md  ONTWERP-GEDEELD-GEHEUGEN.md  RUNBOOK-restore.md  WERKPLAN-SSO-MULTIUSER.md  architecture.md  develop-roadmap.md  effects-catalog.md  feature-roadmap.md  hologram-redesign.md  optimalisatie-onderzoek.md  werkplan-hud-nebula.md  werkplan-neo4j-community.md  werkplan-sdk-transitie.md  werkplan-security-review.md
hud/: package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: backfill_formal.py  claude-login.bat  e2e_smoke.py  eval_retrieval.py  fresh_start.py  genereer_audit_key.bat  genereer_audit_key.py  host_bridge.py  neo4j-backup.sh  neo4j-restore-drill.sh  reanchor_audit.py  spike_sdk.py
tests/: test_audit.py  test_auth_session.py  test_backup_redaction.py  test_bereik.py  test_bootstrap_limits.py  test_brain_health.py  test_brain_latency.py  test_broker.py  test_config.py  test_degraded.py  test_eval_retrieval.py  test_evalset.py  test_fastlane.py  test_fragments.py  test_http_retry.py  test_integration_perms.py  test_jarvis.py  test_llm_client.py  test_mcp.py  test_mcp_peruser.py  test_observability.py  test_owner_auth.py  test_proactive.py  test_readonly_guard.py  test_risk.py  test_safety.py  test_schema_indexes.py  test_sdk_backend.py  test_shared_memory.py  test_skills_tasks.py  test_taakvangnet.py  test_telemetry.py  test_tts_cloud.py  (+4 more)
(+128 files in other folders)
